--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=5001
 NODE_ENV=development
-MONGO_URI=mongodb+srv://malaksadek9924:malak@cluster2.h9qpfhq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster2
+MONGO_URI=mongodb+srv://nermeenradwan22:seatscene@cluster2.h9qpfhq.mongodb.net/
